Fix canvas settings in dark mode

--- a/src/assets/style/components/canvas/_canvas-settings.scss
+++ b/src/assets/style/components/canvas/_canvas-settings.scss
@@ -49,9 +49,11 @@
     background-color: $dark-theme-clr--5;
     .settings-form {
       .input-container {
-        input[type='range'] {
-          &::-webkit-slider-thumb {
-            background-color: $dark-theme-clr;
+        .container {
+          input[type='range'] {
+            &::-webkit-slider-thumb {
+              background-color: $dark-theme-clr;
+            }
           }
         }
       }
